// Vitest Snapshot v1

exports[`InputAdornment > InputAdornment selectVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input-adornment
    prepend="() => h(\\"t-select\\", {
        \\"attrs\\": {
          \\"bordered\\": false,
          \\"autoWidth\\": true,
          \\"options\\": ['http://', 'https://'].map(value => ({
            label: value,
            value
          })),
          \\"defaultValue\\": \\"http://\\"
        }
      })"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
  <t-input-adornment
    append="() => h(\\"t-select\\", {
        \\"attrs\\": {
          \\"bordered\\": false,
          \\"autoWidth\\": true,
          \\"options\\": ['.com', '.cn', '.net', '.org'].map(value => ({
            label: value,
            value
          })),
          \\"defaultValue\\": \\".cn\\"
        }
      })"
  >
    <t-tag-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
  <t-input-adornment
    append="() => h(\\"t-select\\", {
        \\"attrs\\": {
          \\"bordered\\": false,
          \\"autoWidth\\": true,
          \\"options\\": ['.com', '.cn', '.net', '.org'].map(value => ({
            label: value,
            value
          })),
          \\"defaultValue\\": \\".cn\\"
        }
      })"
    prepend="() => h(\\"t-select\\", {
        \\"attrs\\": {
          \\"bordered\\": false,
          \\"autoWidth\\": true,
          \\"options\\": ['http://', 'https://'].map(value => ({
            label: value,
            value
          })),
          \\"defaultValue\\": \\"http://\\"
        }
      })"
  >
    <t-select
      defaultvalue="tencent"
      options="[object Object],[object Object],[object Object]"
    />
  </t-input-adornment>
</div>
`;

exports[`InputAdornment > InputAdornment textVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input-adornment
    prepend="http://"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
  <t-input-adornment
    append=".com"
  >
    <t-tag-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
  <t-input-adornment
    append=".com"
    prepend="http://"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
</div>
`;
